# intelliflow-core

./: .gitignore  README.md  pyproject.toml
intelliflow_core/: __init__.py  contracts.py  governance_ui.py  helpers.py
tests/: __init__.py  test_contracts.py
