[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelliflow-core"
version = "0.1.0"
description = "Shared components for IntelliFlow OS - governance UI, contracts, and utilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "IntelliFlow Team"}
]
keywords = [
    "intelliflow",
    "governance",
    "ai",
    "streamlit",
    "pydantic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/kmufti7/intelliflow-core"
"SupportFlow" = "https://github.com/kmufti7/intelliflow-supportflow"
"CareFlow" = "https://github.com/kmufti7/intelliflow-careflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["intelliflow_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
